--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h2 class="logo">Rugby Football Team</h2>
       <div class="toggle"></div>
     </header>
-    <video src="./video/video_short.mp4" muted loop autoplay></video>
+    <video src="./video/video_fhd_Trim.mp4" muted loop autoplay></video>
     <div class="overlay"></div>
     <div class="text">
       <h2>REBUILD</h2>
