--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </div>
   <section class="banner">
     <header>
-      <h2 class="logo">Rugby Football Team</h2>
+      <h2 class="logo">Rugby Football Club</h2>
       <div class="toggle"></div>
     </header>
     <video src="./video/video_fhd_Trim.mp4" muted loop autoplay></video>
