--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title></title>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta http-equiv="Content-Type" content="text/css">
   <meta name="" content="">
